crates/strider/tests/snapshots/v2__arm_thumb__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x598:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "12" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "12" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v17" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "19" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "23" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "27" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x598:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "27" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "27" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "27" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "27" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "27" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "29" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "27" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v31" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "27" -> "v31" [color="#888888", style=dashed];
  "v31" -> "29" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v32" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "27" -> "v32" [color="#888888", style=dashed];
  "v32" -> "29" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v33" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "27" -> "v33" [color="#888888", style=dashed];
  "v33" -> "29" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v34" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "27" -> "v34" [color="#888888", style=dashed];
  "v34" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
}
